--- a/raw_data/retrieve_data.Rmd
+++ b/raw_data/retrieve_data.Rmd
@@ -8,8 +8,8 @@ output: pdf_document
 
 ```{r}
 library("readr")
-
-setwd("../raw_data")
+# Assume we are in the Tennis Project Directory
+setwd("./raw_data")
 
 download.file("https://raw.githubusercontent.com/JeffSackmann/tennis_atp/master/atp_rankings_current.csv", "rankings_curr.csv")
 rankings_curr <- read_csv("rankings_curr.csv")
